# llama.cu

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
llama.cu/: Cargo.toml  build.rs
llama.cu/src/: chat_template.rs  exec.rs  gguf.rs  handle.rs  infer.rs  lib.rs  loader.rs  memory.rs  model.rs
llama.cu/src/exec/: engine.rs  engine_manager.rs  group.rs  kv_cache.rs  mod.rs  model.rs  new.rs  output_head.rs  step.rs  task.rs
llama.cu/src/exec/engine/: engine_manager.rs  mod.rs
llama.cu/src/exec/new/: engine_manager.rs  mod.rs
llama.cu/src/load/: loader.rs  mod.rs  range_collector.rs
llama.cu/src/model/: chat_template.rs  gguf.rs  mod.rs
llama.cu/src/op/: add.rs  all_reduce.rs  embedding.rs  fast_embedding.cuh  fast_embedding.rs  linear.rs  mod.rs  rms_norm.rs  rope.cuh  rope.rs  swiglu.cuh  swiglu.rs
llama.cu/src/op/random_sample/: export.h  kv_pair.rs  mod.rs  sample.cu  sample.cuh  sample.h  sample.maca
llama.cu/src/utils/: fmt.rs  macros.rs  mod.rs
src/: distribution.rs  exec.rs  fmt.rs  gguf.rs  handle.rs  infer.rs  loader.rs  macros.rs  main.rs  memory.rs  model.rs  range_collector.rs  utils.rs
src/op/: add.cuh  add.rs  all_reduce.rs  embedding.rs  linear.rs  mod.rs  nt_attention.rs  rms_norm.rs  rope.rs  swiglu.cuh  swiglu.rs
src/op/nt-attention/: attention_kv_nh_64.c
src/op/rearrange/: mod.rs  rearrange.cuh
src/utils/: fmt.rs
xtask/: Cargo.toml
xtask/src/: bench.rs  chat.rs  dialog.rs  generate.rs  logger.rs  main.rs
xtask/src/chat/: app_session.rs  mod.rs  tui.rs
xtask/src/service/: cache_manager.rs  client.rs  error.rs  mod.rs  openai.rs  response.rs  schemas.rs
xtask/src/service_/: cache_manager.rs  mod.rs  openai.rs
