[package]
name = "llama-cu"
version = "0.0.0"
edition = "2024"

[dependencies]
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "7b4151b" }
memmap2 = "0.9"
regex = "1.11"
nn = { git = "https://github.com/YdrMaster/InfiniNN", rev = "ae973ed" }
graph = { git = "https://github.com/YdrMaster/InfiniNN", rev = "ae973ed" }
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
tensor = { git = "https://github.com/YdrMaster/tensor", rev = "66450a9" }

[build-dependencies]
bindgen = "0.71"
find_cuda_helper = "0.2"
