[package]
name = "llama-cu"
version = "0.0.0"
edition.workspace = true

[dependencies]
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "9c22154", default-features = false, features = [
    "nvidia-gpu",
] }
tokeneer = { git = "https://github.com/InfiniTensor/tokeneer", rev = "12c2d99" }
regex.workspace = true
serde.workspace = true
memmap2 = "0.9"
rand = "0.9"
smallvec = "1.15"
minijinja = { version = "2.10", default-features = false, features = [
    "loader",
    "builtins",
    "serde",
] }
nn = { git = "https://github.com/YdrMaster/InfiniNN", rev = "481673f" }
graph = { git = "https://github.com/YdrMaster/InfiniNN", rev = "481673f" }
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
tensor = { git = "https://github.com/YdrMaster/tensor", rev = "66450a9" }

[build-dependencies]
build-script-cfg = "0.1"
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "f3ffbcc" }
