[package]
name = "llama-cu"
version = "0.0.0"
edition.workspace = true

[dependencies]
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "ed28f2d", default-features = false, features = [
    "nvidia-gpu",
] }
nn = { git = "https://github.com/YdrMaster/InfiniNN", rev = "23e086c" }
ggus = { git = "https://github.com/InfiniTensor/gguf", rev = "23c362f" }
tokeneer = { git = "https://github.com/InfiniTensor/tokeneer", rev = "12c2d99" }

bytesize = "2.0"
log.workspace = true
regex.workspace = true
serde.workspace = true
memmap2 = "0.9"
rand = "0.9"
smallvec = "1.15"
minijinja = { version = "2.10", default-features = false, features = [
    "loader",
    "builtins",
    "serde",
] }

[build-dependencies]
build-script-cfg = "0.1"
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "f3ffbcc" }
