[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true

[dependencies]
llama-cu.path = "../llama.cu"
regex.workspace = true
clap = { version = "4.5", features = ["derive"] }

log = "0.4"
serde.workspace = true
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "net"] }
hyper = { version = "1.6", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
http-body-util = "0.1"
tokio-stream = "0.1"
base64 = "0.22"
